Fixed gallery spacing issue. Before I delve any further in the design, I'd like to get things ready with the different media devices this could be displayed on.

--- a/styles.sass
+++ b/styles.sass
@@ -151,9 +151,12 @@ header
     margin-top: 70px
     .galBoxA
         margin: 5%
+        margin-top: 80px
         float: left
         width: 100%
         height: 100%
+        display: flex
+        justify-content: space-between
     a 
         outline: none
         text-decoration: none
@@ -320,7 +323,7 @@ section
             text-decoration: none
             color: black
             &:hover
-                color: #9bdb5c
+            color: #9bdb5c
         h2
             margin-top: 50px
             display: block
